#######
# SPDX license identifier: MPL-2.0
#
# Copyright (C) 2015, Advanced Driver Information Technology
# This code is developed by Advanced Driver Information Technology.
# Copyright of Advanced Driver Information Technology, Bosch and DENSO.
#
# This file is part of COVESA Project DLT - Diagnostic Log and Trace.
#
# This Source Code Form is subject to the terms of the
# Mozilla Public License (MPL), v. 2.0.
# If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.
#
# For further information see http://www.covesa.org/.
#######

INSTALL(FILES dlt_gateway.conf
	DESTINATION ${CONFIGURATION_FILES_DIR}
	COMPONENT base)
